Fix show page spacing
This fixes the alignment issues on the show page by removing the space
between the comment and the field, and adding the hyphen to the ERB tag.

We might want to remove the space from all the other partials too for
consistency.

--- a/administrate/app/assets/stylesheets/administrate/components/_attributes.scss
+++ b/administrate/app/assets/stylesheets/administrate/components/_attributes.scss
@@ -3,6 +3,8 @@
   @include span-columns(2 of 12);
   margin-top: 0;
   text-align: right;
+  margin-bottom: 1.85em;
+  clear: left;
 }
 
 .attribute-data--string {
